# ardp

./: .clang-format  .clang_complete  .gitignore  .travis.yml  .ycm_extra_conf.py  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile~  NEWS  README  README.md  SUMMARY.md  autogen.sh  configure.ac  example  index.html  libentee.dylib  params.json  string.c  string.h  test3.ntriples
doc/: Makefile.am  ardp.md  chapter-02-Background-Research.md  chapter-03-The-Approach.md  chapter-04-The-Implementation.md  chapter-05-Evaluation.md  encoding.md  gnu-make.md  installation-guide.md  introduction.md  parser.md  rdf.md  user-guide.md
doc/html/: annotated.html  classes.html  dir_000004_000000.html  dir_000004_000001.html  dir_000005_000000.html  dir_000005_000001.html  dir_000006_000000.html  dir_000006_000001.html  dir_000007_000000.html  dir_000007_000001.html  dir_000007_000004.html  dir_000008_000000.html  dir_000008_000001.html  dir_000008_000004.html  dir_000009_000001.html  dir_000009_000004.html  dir_000010_000001.html  dir_000011_000000.html  dir_000011_000004.html  dir_000012_000004.html  dir_000013_000004.html  dir_000014_000004.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_031c4fc26031de218e3c67acfca35073_dep.map  dir_031c4fc26031de218e3c67acfca35073_dep.md5  dir_2556a4a0510dd1645ff20abdc7f57c5f.html  dir_2556a4a0510dd1645ff20abdc7f57c5f_dep.map  dir_2556a4a0510dd1645ff20abdc7f57c5f_dep.md5  dir_37de6fae00d20bb74f4ce48979765c53.html  dir_37de6fae00d20bb74f4ce48979765c53_dep.map  dir_37de6fae00d20bb74f4ce48979765c53_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f_dep.map  dir_4fef79e7177ba769987a8da36c892c5f_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6c89d1ed406002b4e6ebce07fb51a507.html  (+101 more)
doc/html/d0/d06/: structrdf__term__literal__value.html
doc/html/d0/d0e/: parser_8h__dep__incl.map
doc/html/d0/d11/: all__4_8js.html  all__4_8js_source.html
doc/html/d0/d21/: enums__5_8js.html  (+1 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  (+107 more)
doc/man/man3/: .ycm_extra_conf.py.3  .ycm_extra_conf.py.compilation_database_folder.3  ARDP_ERROR_LEXER_INIT_PREREQUISITE.3  INITIAL_CAPACITY.3  Plugin.3  RDF_TERM_URI.3  README.md.3  SPARQL_BASE.3  SUMMARY.md.3  SearchBox.3  TYPED_LITERAL_SEPARATOR.3  YYMINORTYPE.3  _Developer_school_ardp_build_.3  _Developer_school_ardp_build_doc_.3  _Developer_school_ardp_build_doc_html_.3  _Developer_school_ardp_build_doc_html_search_.3  _Developer_school_ardp_include_.3  _Developer_school_ardp_include_ardp_.3  _Developer_school_ardp_src_.3  _Developer_school_ardp_src_bin_.3  _Developer_school_ardp_src_lib_.3  _Developer_school_ardp_src_lib_decommisioned_.3  _Developer_school_ardp_src_lib_grammars_.3  _Developer_school_ardp_src_lib_lexers_.3  _Developer_school_ardp_src_lib_parsers_.3  _Developer_school_ardp_src_lib_rdf_.3  _Developer_school_ardp_tests_.3  _cursor.3  _datatype_sys_t.3  _map.3  _map_element.3  _parser.3  _token.3  all_0.js.3  all_1.js.3  all_10.js.3  all_11.js.3  all_12.js.3  all_13.js.3  all_14.js.3  (+302 more)
doc/rtf/: dir_031c4fc26031de218e3c67acfca35073.rtf  dir_37de6fae00d20bb74f4ce48979765c53.rtf  dir_4fef79e7177ba769987a8da36c892c5f.rtf  dir_59425e443f801f1f2fd8bbe4959a3ccf.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_86233ef6bfe6132228cb204a640f69cf.rtf  dir_c85d3e3c5052e9ad9ce18c6863244a25.rtf  dir_d0534864bf102e5ad369506ab2855033.rtf  dir_d44c64559bbebec7f509842c48db8b23.rtf  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d7bc0a4bf0ca5a5c50c194d2e40645cb.rtf  dir_d7bc0a4bf0ca5a5c50c194d2e40645cb_dep.md5  refman.rtf
extra/ardp/ardp.xcodeproj/: project.pbxproj
include/ardp/: color.h  error.h  hash.h  hashmap.h  lexer.h  lexer.turtle.h  parser.h  parser_internal.h  rdf.h  rdf.uris.h  sequence.h  string.h  util.h
man/: Makefile.am  ardp.0  ardp.1
scripts/: Makefile.am  objc.valgrind.suppr  ragel_utf8_range.rb
src/: Makefile.am  ardp.c  example.c  parser.c.ri  parser.c.rl  parser.h  parser_internal.h  string.c  string.h  string.h~  string.test.c  util.h
src/lib/: Makefile.am  color.c  hash.c  hashmap.c  parser+nquads.rl  parser.c  parser.c.bck  parser.c.rl  parser.obj.c  parser.rl  sequence.c  string.c  string.test.c
src/lib/decommisioned/: parser+garbage.c  parser.obj.c  parser.rl
src/lib/grammars/: rdf.grammar.common.rl  rdf.grammar.ntriples.rl  rdf.grammar.turtle.rl  rdf.turtle.tokens.rl
src/lib/lexers/: lexer.c  lexer.dot  lexer2.c  lexer_test  lexer_test.c  lexer_turtle.rl  test.txt  test2.txt  turtle.c  turtle.rl  turtle_test.c
src/lib/parsers/: parser.c  rdf.h  rdf.term.c  tempsession.vim  test  test_lemon.c  test_sequence  turtle.c  turtle_parser.c  turtle_parser.h  turtle_parser.y
src/lib/rdf/: rdf_statement.c  rdf_term.c
tests/: Makefile.am  check_ardp_color.c  check_hashmap_create.c  check_hashmap_get.c  check_hashmap_push.c  check_lexer_turtle.c  check_rdf_statement_create.c  check_rdf_term_copy.c  check_rdf_term_create.c  check_rdf_term_is.c  check_sequence_free.c  check_string.c  check_string_append.c  check_string_append_str.c  check_string_copy.c  check_string_create.c  check_string_generic_cmp.c  check_string_strlen.c  test3.ntriples
tests/nt/: cutom_quick_test-01.nt  cutom_quick_test-02.nt  manifest.ttl  minimal_whitespace.nt  nt-syntax-str-esc-01.nt  nt-syntax-subm-01.nt
tests/ttl/: .gitignore  bk.ttl.txt  british-national-bibliography.ttl  yagoSchema.ttl
(+1255 files in other folders)
