AUTOMAKE_OPTIONS = foreign


# libtool requires some M4 scripts to be added to the source tree.  Make sure that
# Autoconf knows where to find them.
#ACLOCAL_AMFLAGS = -I m4

CC=clang -fblocks

SUBDIRS = src \
          doc \
          man \
          scripts \
          tests \
          examples

EXTRA_DIST = include
